--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <title> Lesson 5 Mini Activity </title>
   </head> 
   <body>
-    <h1>My Own User</h1>
+    <h1>Thoughts and Ideas to Imporve Something at my School or in my Community</h1>
+    <ul>
+      <li>Better Cafeteria rules, for example picking up after your self, to clean up mess, ETC</li>
+      <li>A snack and appliance store in the school</li>
+      <li>female essential in bathroom fully stocked></li>
+    </ul>
   </body>
 </html>
