fixed some gramtical error

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <li>A snack and appliance store in the school</li>
       <li>female essential in bathroom fully stocked></li>
     </ul>
-    <h3> Why do we need these changes</h3>
-    <p> these changes are not relitivly that important to the schoo but it will deifntly help the kids at the school.</p>
+    <h3> Why do we need these changes?</h3>
+    <p> These changes are not relitivly that important to the School but it will deifntly help the kids at the school.</p>
   </body>
 </html>
